Added asp mvc views.

--- a/QTCoffeeSlotMachine.AspMvc/Views/Shared/_Layout.cshtml
+++ b/QTCoffeeSlotMachine.AspMvc/Views/Shared/_Layout.cshtml
@@ -26,6 +26,12 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="SlotMachines" asp-action="Index">SlotMachines</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Index">Produkte</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Contact">Contact</a>
                         </li>
                     </ul>
