--- a/QTCoffeeSlotMachine.AspMvc/Views/Products/Edit.cshtml
+++ b/QTCoffeeSlotMachine.AspMvc/Views/Products/Edit.cshtml
@@ -1,11 +1,11 @@
 ﻿@model QTCoffeeSlotMachine.AspMvc.Models.Product
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Edit";
     SelectList machines = new SelectList(Model.SlotMachines, nameof(Model.Id), nameof(Model.Location));
 }
 
-<h1>Create</h1>
+<h1>Edit</h1>
 
 <h4>Product</h4>
 <hr />
@@ -19,7 +19,7 @@
 
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="SlotMachineId" class="control-label"></label>
@@ -29,6 +29,11 @@
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Count" class="control-label"></label>
+                <input asp-for="Count" class="form-control" readonly="readonly" />
+                <span asp-validation-for="Count" class="text-danger"></span>
             </div>
             <p></p>
             <div class="form-group">
